A PoC for compiling an EVM contract into a rust function
The current PoC is using a manually compiled contract. The idea is that
these are going to be generated programatically, compiled to dynamic libs
and loaded on runtime.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ eyre = "0.6.8"
 thiserror = "1.0.31"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
 itertools = "0.10.3"
-revm = { git = "https://github.com/bluealloy/revm" }
+revm = { git = "https://github.com/bluealloy/revm", branch="temp" }
 # for testing:
 rand = "0.8.5"
 paste = "1.0.7"
+evm-dynamic = { path = "evm-dynamic", package = "evm-dynamic" }
