--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,15 @@ eyre = "0.6.8"
 thiserror = "1.0.31"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
 itertools = "0.10.3"
-revm = { git = "https://github.com/bluealloy/revm", branch="temp" }
+revm = { git = "https://github.com/valo/revm", branch = "evm-compilation-operations" }
 # for testing:
 rand = "0.8.5"
 paste = "1.0.7"
 evm-dynamic = { path = "evm-dynamic", package = "evm-dynamic" }
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "evm_bench"
+harness = false
