Finished generating rust code from evm bytecode
The code is generated into a separate crate, which is then compiled and
linked into the main crate as a dynamic library.

Adding the rust code for the snailtracer contract.

--- a/evm-dynamic/Cargo.toml
+++ b/evm-dynamic/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 revm = { git = "https://github.com/valo/revm", branch = "evm-compilation-operations" }
+
+[lib]
+crate-type = ["dylib"]
