Implement automatic generation if native code for EVM bytecode
The bytecode is put in a folder in the repo. During build time, the
bytecode is compiled to native code and linked into the library.

The library has a cache of the compiled code, which can be checked using
the SHA3 hash of the bytecode.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,11 @@ evm-dynamic = { path = "evm-dynamic", package = "evm-dynamic" }
 [dev-dependencies]
 criterion = "0.3"
 
+[build-dependencies]
+revm = { git = "https://github.com/valo/revm", branch = "evm-compilation-operations" }
+hex = { version = "0.4" }
+
+
 [[bench]]
 name = "evm_bench"
 harness = false
